--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-mediapipe
-opencv-python
-streamlit
-streamlit-webrtc
+mediapipe==0.8.3.1
+opencv-python==4.5.1.48
+streamlit==0.82.0
+streamlit-webrtc==0.20.1
