--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-mediapipe==0.8.3.1
-opencv-python==4.5.1.48
+opencv_python_headless==4.5.2.54
 streamlit==0.82.0
-streamlit-webrtc==0.20.1
+mediapipe==0.8.4.2
+numpy==1.18.5
+Pillow==8.2.0
